# discord-intl

./: .gitignore  .prettierrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  shell.nix  tsconfig.base.json  tsconfig.client.json  tsconfig.node.json
.cargo/: config.toml
crates/intl_database_core/: Cargo.toml  README.md
crates/intl_database_core/src/: error.rs  lib.rs
crates/intl_database_core/src/database/: message.rs  mod.rs  source.rs  symbol.rs
crates/intl_database_core/src/message/: meta.rs  mod.rs  source_file.rs  value.rs
crates/intl_database_exporter/: Cargo.toml  README.md
crates/intl_database_exporter/src/: bundle.rs  export.rs  lib.rs  precompile.rs
crates/intl_database_js_source/: Cargo.toml  README.md
crates/intl_database_js_source/src/: extractor.rs  lib.rs  unescape.rs
crates/intl_database_types_generator/: Cargo.toml  README.md
crates/intl_database_types_generator/src/: comment.rs  lib.rs  type_def.rs  writer.rs
crates/intl_flat_json_parser/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/intl_flat_json_parser/bench/: index.js
crates/intl_flat_json_parser/benches/: index.js  json_parsing.rs
crates/intl_flat_json_parser/npm/darwin-arm64/: README.md  package.json
crates/intl_flat_json_parser/npm/darwin-x64/: README.md  package.json
crates/intl_flat_json_parser/npm/linux-arm64-gnu/: README.md  package.json
crates/intl_flat_json_parser/npm/linux-x64-gnu/: README.md  package.json
crates/intl_flat_json_parser/npm/win32-arm64-msvc/: README.md  package.json
crates/intl_flat_json_parser/npm/win32-x64-msvc/: README.md  package.json
crates/intl_flat_json_parser/src/: lib.rs  napi.rs  parser.rs  util.rs
crates/intl_markdown/: .gitignore  Cargo.toml  README.md  mod.rs
crates/intl_markdown/.cargo/: config.toml
crates/intl_markdown/benches/: icu_messageformat_parser_bench.rs  long_documents.rs
crates/intl_markdown/examples/: gen-html-entities.rs  gen-spec-tests.rs  profile_test.rs
crates/intl_markdown/scripts/: cjk-ranges.ts
crates/intl_markdown/src/: block_parser.rs  byte_lookup.rs  cjk.rs  cst.rs  delimiter.rs  html_entities.rs  lexer.rs  lib.rs  token.rs
crates/intl_markdown/src/ast/: format.rs  mod.rs  process.rs  visitor.rs
crates/intl_markdown/src/commonmark_html/: format_element.rs  formatter.rs  html_format.rs  mod.rs  plain_text.rs  util.rs
crates/intl_markdown/src/compiler/: compiler.rs  element.rs  element_ext.rs  mod.rs  util.rs  visitor.rs
crates/intl_markdown/src/cst/: extra.rs  mod.rs  nodes.rs  util.rs  visitor.rs
crates/intl_markdown/src/format/: html.rs  mod.rs  serialize.rs  util.rs
crates/intl_markdown/src/formatter/: formatter.rs  mod.rs  plain_text.rs  util.rs
crates/intl_markdown/src/icu/: compile.rs  format.rs  mod.rs  serialize.rs  tags.rs
crates/intl_markdown/src/parser/: block.rs  code_span.rs  delimiter.rs  emphasis.rs  icu.rs  inline.rs  link.rs  marker.rs  mod.rs  strikethrough.rs  text.rs
crates/intl_markdown/src/syntax/: element.rs  iterators.rs  kind.rs  mod.rs  node.rs  printer.rs  support.rs  text.rs  token.rs  traits.rs  tree.rs
crates/intl_markdown/tests/: harness.rs  icu.rs  icu_ast.rs  md_extensions.rs  mod.rs  spec_regression.rs  test_ast.rs
crates/intl_message_database/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/intl_message_database/.cargo/: config.toml
crates/intl_message_database/bench/: .gitignore  native.js  util.js
crates/intl_message_database/examples/: public-test.rs
crates/intl_message_database/src/: lib.rs  napi.rs  public.rs  test.rs  threading.rs
crates/intl_message_database/tests/: full_stack_test.rs  mod.rs
crates/intl_validator/: Cargo.toml  README.md
crates/intl_validator/src/: category.rs  content.rs  diagnostic.rs  fix.rs  lib.rs  macros.rs  message_diagnostic.rs  severity.rs
crates/intl_validator/tests/: mod.rs  offsets.rs
crates/keyless_json/: Cargo.toml  README.md
crates/keyless_json/src/: lib.rs  string.rs
intl_markdown/: .gitignore  Cargo.toml
intl_markdown/.cargo/: config.toml
intl_markdown/benches/: long_documents.rs  spec.md
intl_markdown/src/: block_parser.rs  byte_lookup.rs  event.rs  html_entities.rs  lexer.rs  lib.rs  syntax.rs  token.rs
intl_markdown/src/ast/: format.rs  mod.rs  process.rs  util.rs
intl_markdown/src/icu/: compile.rs  format.rs  mod.rs  serialize.rs
intl_markdown/src/parser/: code_span.rs  delimiter.rs  emphasis.rs  icu.rs  link.rs  mod.rs  strikethrough.rs
intl_markdown/src/tree_builder/: cst.rs  mod.rs
intl_markdown/tests/: harness.rs  icu.rs  icu_ast.rs  md_extensions.rs  mod.rs  test_ast.rs
intl_message_database/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
intl_message_database/.cargo/: config.toml
intl_message_database/bench/: keyless-json.js  native.js
intl_message_database/npm/darwin-arm64/: README.md  package.json
intl_message_database/npm/darwin-x64/: README.md  package.json
intl_message_database/npm/linux-arm64-gnu/: README.md  package.json
intl_message_database/npm/linux-arm64-musl/: package.json
intl_message_database/npm/linux-x64-gnu/: package.json
intl_message_database/npm/linux-x64-musl/: README.md  package.json
intl_message_database/npm/local/: README.md  package.json
intl_message_database/npm/win32-arm64-msvc/: README.md  package.json
intl_message_database/npm/win32-ia32-msvc/: README.md  package.json
intl_message_database/npm/win32-x64-msvc/: README.md  package.json
intl_message_database/src/: lib.rs  napi.rs  test.rs
intl_message_database/src/messages/: database.rs  error.rs  message_definition.rs  message_variables_visitor.rs  meta.rs  mod.rs  source_file.rs  symbols.rs  value.rs
intl_message_database/src/services/: export.rs  mod.rs  precompile.rs  types.rs  validator.rs
intl_message_database/src/sources/: definitions_parser.rs  mod.rs  translations.rs
swc-intl-message-transformer/: Cargo.toml  README.md  package.json  swc_intl_message_transformer.wasm
swc-intl-message-transformer/src/: config.rs  lib.rs  transformer.rs
(+284 files in other folders)
