[workspace]
members = [
    "intl_message_database",
    "intl_markdown",
    "intl_markdown_macros",
    "intl_message_utils",
    "keyless_json",
    "swc-intl-message-transformer",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
# Optimize for performance
opt-level = 3
# Strip debug symbols
strip = "symbols"
panic = "abort"

[workspace.metadata.cross.build]
zig = "2.17"
