[workspace]
members = [
    "crates/intl_allocator",
    "crates/intl_database_core",
    "crates/intl_database_exporter",
    "crates/intl_database_js_source",
    "crates/intl_database_json_source",
    "crates/intl_database_service",
    "crates/intl_database_types_generator",
    "crates/intl_flat_json_parser",
    "crates/intl_markdown",
    "crates/intl_markdown_macros",
    "crates/intl_markdown_visitor",
    "crates/intl_message_database",
    "crates/intl_message_utils",
    "crates/intl_validator",
    "crates/keyless_json",
    "packages/swc-intl-message-transformer",
]
resolver = "2"

[workspace.dependencies]
intl_allocator = { path = "./crates/intl_allocator" }
intl_database_core = { path = "./crates/intl_database_core" }
intl_database_exporter = { path = "./crates/intl_database_exporter" }
intl_database_js_source = { path = "./crates/intl_database_js_source" }
intl_database_json_source = { path = "./crates/intl_database_json_source" }
intl_database_service = { path = "./crates/intl_database_service" }
intl_database_types_generator = { path = "./crates/intl_database_types_generator" }
intl_flat_json_parser = { path = "./crates/intl_flat_json_parser" }
intl_markdown = { path = "./crates/intl_markdown" }
intl_markdown_macros = { path = "./crates/intl_markdown_macros" }
intl_markdown_visitor = { path = "./crates/intl_markdown_visitor" }
intl_message_database = { path = "./crates/intl_message_database" }
intl_message_utils = { path = "./crates/intl_message_utils" }
intl_validator = { path = "./crates/intl_validator" }
keyless_json = { path = "./crates/keyless_json" }

anyhow = "1"
ignore = "0.4.19"
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }
napi = { version = "3.0.0-alpha.8", features = ["error_anyhow", "serde-json"] }
napi-derive = "3.0.0-alpha.7"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_common = "5.0.0"
swc_core = "10.6.1"
thiserror = "1"
threadpool = "1.8.1"
unescape_zero_copy = "2.1.1"
unicode-xid = "0.2.6"
xxhash-rust = { version = "0.8.10", features = ["xxh64"] }
ustr = { version = "1.0.0", features = ["serde"] }
memchr = "2.7.4"
once_cell = "1.19.0"

# Build dependencies
napi-build = "2"

[profile.release-profiling]
inherits = "release"
codegen-units = 1
lto = true
# Optimize for performance
opt-level = 3
debug = true
strip = false
panic = "abort"


[profile.release]
codegen-units = 1
lto = true
# Optimize for performance
opt-level = 3
# Strip debug symbols
strip = "symbols"
panic = "abort"

[workspace.metadata.cross.build]
zig = "2.17"
