[package]
name = "intl_message_database"
description = "A core intl message management databae, supporting CRUD for messages with attribution to their source files."
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arcstr = "1"
anyhow = "1"
bitflags = "2"
codespan-reporting = { version = "0.11.1", features = ["serialization"] }
intl_markdown = { path = "../intl_markdown" }
intl_message_utils = { path = "../intl_message_utils" }
keyless_json = { path = "../keyless_json" }
napi = { version = "2", features = ["error_anyhow", "serde-json"] }
napi-derive = "2"
num_cpus = "1"
rustc-hash = "1"
serde = "1"
serde_json = "1"
string-interner = "0.15.0"
swc_common = "0.33.25"
swc_core = { version = "0.90.x", features = [
    "ecma_parser",
    "ecma_ast",
    "ecma_visit",
] }
thiserror = "1"
threadpool = "1.8.1"
xxhash-rust = { version = "0.8.10", features = ["xxh64"] }
mimalloc = "0.1"

[build-dependencies]
napi-build = "2"
