[package]
name = "intl_message_database"
description = "A core intl message management databae, supporting CRUD for messages with attribution to their source files."
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bitflags = "2"
intl_markdown = { path = "../intl_markdown" }
intl_message_utils = { path = "../intl_message_utils" }
keyless_json = { path = "../keyless_json" }
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }
napi = { version = "3.0.0-alpha.8", features = ["error_anyhow", "serde-json"] }
napi-derive = "3.0.0-alpha.7"
num_cpus = "1"
rustc-hash = "2"
serde = "1"
serde_json = "1"
# This version is roughly tied to rspack versions.
# Use https://plugins.swc.rs/ to pick an appropriate version.
swc_common = "0.40.x"
swc_core = { version = "0.106.x", features = [
    "ecma_parser",
    "ecma_ast",
    "ecma_visit",
] }
thiserror = "1"
threadpool = "1.8.1"
unescape_zero_copy = "2.1.1"
xxhash-rust = { version = "0.8.10", features = ["xxh64"] }
ustr = { version = "1.0.0", features = ["serde"] }

[build-dependencies]
napi-build = "2"
