[package]
name = "swc-intl-message-transformer"
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
pathdiff = "0.2.1"
intl_message_utils = { path = "../intl_message_utils" }
serde = "1"
serde_json = "1"
# This version is roughly tied to rspack versions.
# Use https://plugins.swc.rs/ to pick an appropriate version.
swc_core = { version = "0.106.x", features = ["ecma_plugin_transform"] }
tracing = "0.1.40"
ustr = "1.0.0"
