[package]
name = "intl_database_js_source"
version = "0.1.0"
edition = "2021"

[dependencies]
intl_database_core = { workspace = true }
intl_message_utils = { workspace = true }
swc_common = "4.0.1"
# This version is roughly tied to our rspack version: https://swc.rs/docs/plugin/selecting-swc-core
# rspack 1.1 uses swc_core 5.0.1.
swc_core = { version = "=5.0.1", features = [
    "ecma_parser",
    "ecma_ast",
    "ecma_visit",
] }
unescape_zero_copy = { workspace = true }