[package]
name = "intl_database_js_source"
version = "0.1.0"
edition = "2021"

[dependencies]
intl_database_core = { workspace = true }
intl_message_utils = { workspace = true }
swc_common = { workspace = true }
swc_core = { workspace = true, features = [
    "ecma_parser",
    "ecma_ast",
    "ecma_visit",
] }
unescape_zero_copy = { workspace = true }
