[package]
name = "intl_markdown"
description = "A combination Markdown and ICU messageformat parser for i18n messages."
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
bench = false
# Not using doctests currently
doctest = false

[features]
# Enable extra tracking and tracing within the parser to aid debugging.
test = ["debug-tracing"]
debug-tracing = []

[dependencies]
intl_allocator = { workspace = true }
intl_markdown_macros = { workspace = true }
memchr = { workspace = true }
pulldown-cmark = "0.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
slice-dst = "1.6.0"
unescape_zero_copy = { workspace = true }
unicode-properties = "0.1.3"
unicode-xid = { workspace = true }
lazy_static = "1.5.0"

[dev-dependencies]
test-case = "3"
criterion = { workspace = true }
keyless_json = { workspace = true }

[[bench]]
name = "long_documents"
harness = false

[[bench]]
name = "icu_messageformat_parser_bench"
harness = false